# bayes-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: mcmc_benchmarks.rs
examples/: conjugate_models.rs  discrete_distributions.rs  hierarchical_model.rs  linear_regression.rs  serde_diagnostics.rs
src/: diagnostics.rs  distributions.rs  error.rs  lib.rs  multi_chain.rs  samplers.rs
tests/: conjugate_models_test.rs  integration_tests.rs
